--- a/Question1-HTML.html
+++ b/Question1-HTML.html
@@ -12,8 +12,8 @@ Wikivoyage</h1>
 
   <li>If you are starting a new page from the beginning, please make use of our <strong>strong</strong> <em>article skeletons</em></li>
 
-  <li>To view article history, click on the "history" tab for any article. Let's
-      look at an example on <href= "https://en.wikivoyage.org/wiki/File:Be_bold2.svg>Wikipedia homepage</a>
+  <li>To view article history, click on the "history" tab for any article.</li> Let's
+      look at an example on <a href="https://en.wikivoyage.org/wiki/File:Be_bold2.svg">Wikipedia homepage</a>
 </ul>
 </body>
 </html>
