--- a/Question1-HTML.html
+++ b/Question1-HTML.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-<img src="lab2/send.jpg" alt="" width="150" />
-Wikivoyage</h1>
+<img src="lab2/send.jpg" alt="Wikivoyage" width="150" />
+<h1>Wikivoyage</h1>
 <p>How to edit a page</p>
 
 <ul>
