--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -6,7 +6,11 @@
     .mainsection a {
       text-decoration: none;
       color: #414040;
-      outline: none;
+    }
+    .mainsection a:hover,
+    .mainsection a:focus {
+      text-decoration: underline;
+      color: #007bff;
     }
 
     
