adding hover n focus

--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -10,7 +10,7 @@
     .mainsection a:hover,
     .mainsection a:focus {
       text-decoration: underline;
-      color: #ff00d9;
+      color: #007bff;
     }
 
     
