changing Button Semantics

--- a/Question3-CSSandHTML.html
+++ b/Question3-CSSandHTML.html
@@ -34,7 +34,7 @@
 
   <p>What causes errors in HTML?</p>
 
-  <button>Submit answers</button>
+  <button class="button">Submit answers</button>
 
 </body>
 
